--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,7 @@
 machine:
   environment:
       DATABASE_URL: 'postgres://ubuntu:@127.0.0.1:5432/circle_test'
+  python:
+    version: 3.5.1
   services:
     - postgresql
