--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+codecov==2.0.5
+coverage==4.2
 dj-database-url==0.4.1
 Django==1.10.3
 django-markdownx==1.6.3
 Markdown==2.6.7
 Pillow==3.4.2
 psycopg2==2.6.2
+requests==2.12.1
 whitenoise==3.2.2
