--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ coverage==4.2
 dj-database-url==0.4.1
 Django==1.10.3
 django-markdownx==1.6.3
+django-nose==1.4.4
 Markdown==2.6.7
+nose==1.3.7
 Pillow==3.4.2
 psycopg2==2.6.2
 requests==2.12.1
