--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 codecov==2.0.5
-coverage==4.2
-dj-database-url==0.4.1
-Django==1.10.3
+coverage==4.3.1
+dj-database-url==0.4.2
+Django==1.10.5
 django-markdownx==1.6.3
 django-nose==1.4.4
 Markdown==2.6.7
 nose==1.3.7
-Pillow==3.4.2
+olefile==0.44
+Pillow==4.0.0
 psycopg2==2.6.2
-requests==2.12.1
-whitenoise==3.2.2
+requests==2.12.4
+whitenoise==3.2.3
